examples/errors/duplicate_entity.eventmodel
Title: Duplicate Entity Names

Swimlane: Service A
- Event: OrderPlaced

Swimlane: Service B
- Command: OrderPlaced